# BrightVision

./: .gitignore  .gitmodules  .pnp.cjs  AGENTS.md  README.md  activate.sh  cloud-llm.env.example  index.html  local-llm.env.example  package.json  playwright.config.ts  playwright.llm.config.ts  pyproject.toml  requirements-core.txt  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/test-lab/src-tauri/: Cargo.toml  tauri.conf.json
apps/test-lab/src-tauri/capabilities/: default.json
apps/test-lab/src-tauri/icons/: README.md  icon.icns
apps/test-lab/src-tauri/src/: main.rs  ntfy_notify.rs
assets/: BrightVision.icns  Glass_TTY_VT220.otf.dfont  Glass_TTY_VT220.sfd  aider-vision-sql.ai  aider-vision.ai  av-large.ai  av.ai  bright-vision-horiz.ai  bright-vision-logo-test.ai  bright-vision-logo.ai  bright-vision.ai  fontdef  interblack  interthin  logo.py  logo_bold.py
bench-submissions/: README.md
bright_vision_core/: agent_todos.py  async_bridge.py  brand.py  cli_test_suite.py  cli_test_suite_serve.py  event_io.py  git_workspace.py  http_api.py  llm_progress.py  model_router.py  roadmap_hints.py  session.py  session_debug.py  spec_focus.py  spec_layers.py  todo_spec_generate.py  todo_spec_jobs.py  workspace_paths.py  workspace_todos.py
docs/: ARCHITECTURE.md  BENCH_LEADERBOARD.md  BRIGHT_VISION_PIVOT.md  BUILD_MACOS.md  CECLI_MIGRATION_ROADMAP.md  CNAME  CORE_FILE_MERGE.md  DEVELOPMENT.md  FEATURES.md  IPC.md  LOCAL_LLM.md  MOBILE_REMOTE.md  RELEASE.md  ROADMAP.md  SPEC_DRIVEN_DEV.md  SUBMODULE_VERIFICATION.md  TESTING.md  TROUBLESHOOTING.md  USER_WORKFLOW.md  index.html
e2e/: ROADMAP_COVERAGE.md  SHIPPED_FEATURES.md  agent-llm.spec.ts  chat-context.spec.ts  chat-input.spec.ts  chat-ux.spec.ts  confirm-flow.spec.ts  context-llm.spec.ts  editor-languages.spec.ts  file-upload.spec.ts  (+27 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lan_remote.rs  local_llm_config.rs  local_llm_runtime.rs  main.rs  resource_monitor.rs  workspace_editor.rs
(+260 files in other folders)
