[package]
name = "bright-vision"
version = "0.1.2-bright22"
description = "BrightVision — local LLM desktop IDE (Tauri + cecli)"
authors = ["Digital Defiance"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sysinfo = "0.33"
keyring = "3"
getrandom = "0.2"
base64 = "0.22"
axum = "0.7"
futures-util = "0.3"
if-addrs = "0.14"
hostname = "0.4"
mdns-sd = "0.11"
tower-http = { version = "0.5", features = ["cors"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
