[package]
name = "bright-vision-test-lab"
version = "0.1.0"
description = "BrightVision Test Lab — suite runner UI"
authors = ["Digital Defiance"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
